# travel-log

./: .gitignore  README.md  db.sqlite3  pyproject.toml
backend/: db.sqlite3  pyproject.toml
backend/mytrips/: admin.py  models.py  serializers.py  urls.py  views.py
backend/mytrips/templates/: 404.html  country_details.html  main.html  master.html  plan_details.html  plans.html  stops.html  trip_details.html
backend/mytrips/utils/: choices.py  geolocations.py
backend/travel_log/: asgi.py  settings.py  urls.py  wsgi.py
backend/trips/: settings.py
frontend/: index.html  package.json
frontend/src/: App.tsx  data.ts  fetchData.ts  main.tsx
frontend/src/components/: AddButton.tsx  CountryMap.tsx  CreateCityForm.tsx  CreatePlanForm.tsx  CreateStopsForm.tsx  DataTable.tsx  Header.tsx  HeaderWithButton.tsx  ModalForm.tsx  MultiSelect.tsx  Navbar.tsx  PlanCard.tsx  SideBox.tsx  Stats.tsx  TablePagination.tsx  TripCard.tsx  germany.json  interfaces.tsx
frontend/src/routes/: Cities.tsx  Countries.tsx  CountryDetail.tsx  Home.tsx  PlanDetail.tsx  Plans.tsx  Stops.tsx  TripDetail.tsx
frontend/src/utils/: saveData.ts  timeAgo.ts
mytrips/: models.py  urls.py  views.py
mytrips/templates/: 404.html  500.html  cities.html  city_form.html  countries.html  main.html  master.html  stops.html
mytrips/utils/: choices.py  geolocations.py
trips/: db.sqlite3  settings.py  urls.py
trips/mytrips/: admin.py  apps.py  models.py  urls.py  views.py
trips/mytrips/templates/: cities.html  countries.html  country_details.html  main.html  (+1 more)
trips/trips/: settings.py  urls.py
(+1 files in other folders)
