[tool.poetry]
name = "travel_log"
version = "0.1.0"
description = ""
authors = ["leonardofj <leonardofj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.28"
django-bootstrap-v5 = "^1.0.11"
geopy = "^2.4.0"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
